1. modify readme.md 2. add page 3. modify sidebar 4. modify config

--- a/src/@rocketseat/gatsby-theme-docs/text/index.mdx
+++ b/src/@rocketseat/gatsby-theme-docs/text/index.mdx
@@ -1,22 +1,27 @@
-# Introduction
+# Hello World 👋
 
-Rocket Docs is a complete and awesome Gatsby Theme for documentation websites. We've
-developed it to be easy to use and customize. Forget about other
-things and focus on what matters: **writing docs.**
+<p align="center">
+  <img
+    src="https://github.com/bagusrizkis/lectureH8/blob/prep/src/@rocketseat/gatsby-theme-docs/components/assets/h8-logo.png?raw=true"
+    alt="Hacktiv8 Logo"
+    width="100%"
+  />
+</p>
 
-## Features
+Website ini berisi lecture text-based dari **phase preparation (phase 0)** Hacktiv8 Indonesia.
 
-- 📝 MDX for docs;
-- 🛣 Yaml-based sidebar navigation;
-- 📱 Responsive and mobile friendly;
-- 🖥 Code highlighting with [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer) and [react-live](https://github.com/FormidableLabs/react-live) support;
-- 🥇 SEO (Sitemap, schema.org data, Open Graph and Twitter tags).
-- 📈 Google Analytics support;
-- 📄 Custom docs schema;
-- 🖱 Table of Contents;
-- ⚡️ Offline Support & WebApp Manifest;
-- and much more 🔥
+## Legenda
 
-<br />
+> 👌 Nice to know
 
-[Get started now!](/getting-started)
+> 🐣 Duck Says
+
+> 🚩 Tips
+
+> ❗ Important Notice
+
+## Contribution
+
+Open contribution in [github repo](https://github.com/bagusrizkis/lectureH8).
+
+<!-- [Get started now!](/getting-started) -->
