--- a/src/docs/loop/pseudocode-iteration.mdx
+++ b/src/docs/loop/pseudocode-iteration.mdx
@@ -18,11 +18,11 @@ Di Javascript yang akan kita pelajari ada 2 dulu yaitu:
 
 ## For loop
 
-> ❗ Basanya digunakan ketika kita sudah tahu sampai mana berhentinya (batas akhir) iterasinya
+> ❗ Biasanya digunakan ketika kita sudah tahu sampai mana berhentinya (batas akhir) iterasinya
 
 ### Syntax For Loop
 
-for statement mempunyai 3 expression yang bersifat optional untuk mengimplementasikan loop
+for statement mempunyai 3 expression untuk mengimplementasikan loop
 yaitu
 
 ```js
